tests/lexer/fail/newline_in_string.c
int main() {
	chat* txt = "Here comes the
		line break";
}
